# dbc-rs

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SPECIFICATIONS.md  build.rs  rust-toolchain.toml  rustfmt.toml  setup-git-hooks.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: benchmark-compare.yml  ci.yml  dbc-rs.yml
benches/: parse_bench.rs
examples/: create_dbc.rs  decode.rs  decode_frame.rs  encode.rs  parse_no_std.rs  parse_std.rs
sigma-bounded/: Cargo.toml  README.md
sigma-bounded/src/: btree_map.rs  error.rs  lib.rs  string.rs  vec.rs
src/: byte_order.rs  lib.rs  macros.rs
src/attribute/: attribute_definition.rs  attribute_object_type.rs  attribute_target.rs  attribute_value.rs  attribute_value_type.rs  impls.rs  mod.rs  parse.rs  std.rs
src/attribute/builder/: build.rs  impls.rs  mod.rs
src/bit_timing/: impls.rs  mod.rs  parse.rs  std.rs
src/bit_timing/builder/: build.rs  impls.rs  mod.rs
src/compat/: mod.rs
src/dbc/: attributes_map.rs  decode.rs  encode.rs  ext_mux_index.rs  impls.rs  messages.rs  mod.rs  parse.rs  std.rs  validate.rs  value_descriptions_map.rs
src/dbc/attributes_map/: attribute_defaults_map.rs  attribute_definitions_map.rs  attribute_values_map.rs
src/dbc/builder/: build.rs  impls.rs  mod.rs
src/dbc/decode/: switch_values.rs
src/error/: helpers.rs  impls.rs  mod.rs
src/error/lang/: en_no_std.rs  en_std.rs  mod.rs
src/extended_multiplexing/: impls.rs  mod.rs  parse.rs
src/extended_multiplexing/builder/: build.rs  impls.rs  mod.rs
src/fast_dbc/: decode.rs  fast_dbc_inner.rs  hasher.rs  mod.rs
src/message/: decode.rs  impls.rs  mod.rs  parse.rs  signals.rs  std.rs  validate.rs
src/message/builder/: build.rs  impls.rs  mod.rs
src/nodes/: impls.rs  mod.rs  node.rs  parse.rs  std.rs  validate.rs
src/nodes/builder/: build.rs  impls.rs  mod.rs
src/parser/: expect.rs  impls.rs  keyword.rs  mod.rs  parse.rs  skip.rs  take.rs
src/receivers/: impls.rs  mod.rs  parse.rs  std.rs
src/receivers/builder/: build.rs  impls.rs  mod.rs
src/signal/: decode.rs  encode.rs  impls.rs  mod.rs  parse.rs  std.rs  validate.rs
src/signal/builder/: build.rs  impls.rs  mod.rs
src/value_descriptions/: impls.rs  mod.rs
src/value_descriptions/builder/: build.rs  impls.rs  mod.rs
src/version/: impls.rs  mod.rs  parse.rs  std.rs
src/version/builder/: build.rs  impls.rs  mod.rs
tests/: comment_tests.rs  edge_cases.rs  heapless_size.rs  integration_tests.rs  proptest_tests.rs  real_world_tests.rs
tests/data/: 11-bit-odb2.dbc  broadcast_signals.dbc  complete.dbc  extended_ids.dbc  minimal.dbc  multiline_comments.dbc  multiplexed.dbc  simple.dbc
