[workspace]
members = [".", "sigma-bounded"]
resolver = "2"

[workspace.dependencies]
embedded-can = "0.4.1"

[workspace.lints.clippy]
collapsible_if = "allow"
uninlined_format_args = "allow"

[package]
name = "dbc-rs"
version = "0.9.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
repository = "https://github.com/sigmatactical-org/dbc-rs"
homepage = "https://sigmatactical.org"
rust-version = "1.97.0"
readme = "README.md"
description = "Database CAN (DBC) parsing and editing library"
documentation = "https://docs.rs/dbc-rs"
keywords = ["can", "dbc", "automotive", "no_std"]
categories = ["parsing", "embedded"]
exclude = [".github/", "examples/", "tests/"]

[dependencies]
sigma-bounded = { path = "sigma-bounded", version = "0.2.0", default-features = false }

[dependencies.heapless]
version = "0.9.3"
optional = true

[dependencies.embedded-can]
workspace = true
optional = true

[package.metadata.docs.rs]
features = ["std", "attributes"]

[features]
default = ["std", "attributes"]
alloc = ["sigma-bounded/alloc"]
heapless = ["dep:heapless", "sigma-bounded/heapless"]
std = ["alloc"]
embedded-can = ["dep:embedded-can"]
attributes = []

[[example]]
name = "create_dbc"
path = "examples/create_dbc.rs"
required-features = ["std"]

[[example]]
name = "parse_std"
path = "examples/parse_std.rs"
required-features = ["std"]

[[example]]
name = "parse_no_std"
path = "examples/parse_no_std.rs"
required-features = ["alloc"]

[[example]]
name = "decode"
path = "examples/decode.rs"
required-features = ["std"]

[[example]]
name = "encode"
path = "examples/encode.rs"
required-features = ["std"]

[[example]]
name = "decode_frame"
path = "examples/decode_frame.rs"
required-features = ["std", "embedded-can"]

[dev-dependencies]
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
criterion = { version = "0.8.2", default-features = false }

[[bench]]
name = "parse_bench"
harness = false
required-features = ["std"]

[lints]
workspace = true
