[package]
name = "sigma-bounded"
version = "0.1.1"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
description = "Bounded Vec, String, and map types abstracting alloc vs heapless"
repository = "https://github.com/sigmatactical-org/dbc-rs"
readme = "README.md"
publish = false

[dependencies.heapless]
version = "0.9.2"
optional = true

[features]
default = ["alloc"]
alloc = []
heapless = ["dep:heapless"]

[lints]
workspace = true
