[package]
name = "sigma-bounded"
version = "0.2.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
description = "Bounded Vec, String, and map types abstracting alloc vs heapless"
repository = "https://github.com/sigmatactical-org/dbc-rs"
homepage = "https://sigmatactical.org"
documentation = "https://docs.rs/sigma-bounded"
readme = "README.md"
keywords = ["no_std", "embedded", "heapless", "alloc"]
categories = ["data-structures", "embedded"]

[dependencies.heapless]
version = "0.9.3"
optional = true

[features]
default = ["alloc"]
alloc = []
heapless = ["dep:heapless"]

[lints]
workspace = true
